--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           </div>
           <nav class="nav header__nav">
             <ul class="list-reset nav__list flex">
-              <li class="nav__item"><a href="#" class="nav__link">Главная</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">О нас</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">Преподаватели</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">Курсы</a></li>
+              <li class="nav__item"><a href="#hero" class="nav__link">Главная</a></li>
+              <li class="nav__item"><a href="#advantages" class="nav__link">О нас</a></li>
+              <li class="nav__item"><a href="#teachers" class="nav__link">Преподаватели</a></li>
+              <li class="nav__item"><a href="#courses" class="nav__link">Курсы</a></li>
             </ul>
           </nav>
         </div>
@@ -38,7 +38,7 @@
     </div>
   </header>
   <main class="main">
-    <section class="hero">
+    <section class="hero" id="hero">
       <div class="container">
         <div class="row">
           <div class="col-lg-5 col-md-6 col-sm-12">
@@ -62,7 +62,7 @@
         </div>
       </div>
     </section>
-    <section class="advantages">
+    <section class="advantages" id="advantages">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -102,7 +102,7 @@
         </div>
       </div>
     </section>
-    <section class="teachers">
+    <section class="teachers" id="teachers">
       <div class="container teachers__container">
         <h2 class="second-title teachers__title">Преподаватели курсов</h2>
         <div class="row">
@@ -176,7 +176,7 @@
         </div>
       </div>
     </section>
-    <section class="courses flex">
+    <section class="courses flex" id="courses">
       <div class="container courses__container">
         <h2 class="second-title courses__title">Курсы</h2>
         <div class="row">
